--- a/99-headloss/hazenwilliams/hazenwilliams.html
+++ b/99-headloss/hazenwilliams/hazenwilliams.html
@@ -18,12 +18,12 @@
                     <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                     <li class="nav-item dropdown"><a class="nav-link active dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">Pressurized</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Hazen–Williams</a></li>
+                            <li><a class="dropdown-item" href="hazenwilliams.html">Hazen–Williams</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">Gravity</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Kutter</a></li>
+                            <li><a class="dropdown-item" href="../kutter/kutter.html">Kutter</a></li>
                         </ul>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="#">Formulas</a></li>
@@ -208,7 +208,7 @@
     </div>
 
     <footer class="footer">
-        <p>©2023, NGG - All rights reserved.</p>
+        <p>©2024, NGG - All rights reserved.</p>
     </footer>
 
     <script src="../bootstrap/js/bootstrap.bundle.min.js"></script>
