--- a/99-headloss/index.html
+++ b/99-headloss/index.html
@@ -23,7 +23,7 @@
                     </li>
                     <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">Gravity</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Kutter</a></li>
+                            <li><a class="dropdown-item" href="kutter/kutter.html">Kutter</a></li>
                         </ul>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="#">Formulas</a></li>
@@ -38,9 +38,8 @@
             <div class="col-lg-6 col-md-6">
                 <div class="card" style="width: 18rem;">
                     <h4 class="card-title">Hazen–Williams</h4>
-                    <img src="assets/manning.jpg" class="card-image" alt="...">
+                    <img src="assets/hazen-will.jpg" class="card-image" alt="...">
                     <div class="card-body">
-                        <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
                         <a href="hazenwilliams/hazenwilliams.html" class="btn btn-primary">Calculate</a>
                     </div>
                 </div>
@@ -57,7 +56,7 @@
                         <img src="assets/manning.jpg" class="card-image" alt="...">
                         <div class="card-body">
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                            <a href="#" class="btn btn-primary">Calculate</a>
+                            <a href="kutter/kutter.html" class="btn btn-primary">Calculate</a>
                         </div>
                     </div>
                 </div>
@@ -67,7 +66,7 @@
     </div>
 
     <footer class="footer">
-        <p>©2023, NGG - All rights reserved.</p>
+        <p>©2024, NGG - All rights reserved.</p>
     </footer>
 
     
