--- a/99-headloss/hazenwilliams/hazenwilliams.html
+++ b/99-headloss/hazenwilliams/hazenwilliams.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../style.css">
     <title>Head Loss Calculator</title>
 </head>
 <body>
@@ -24,9 +24,10 @@
                     <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">Gravity</a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="../kutter/kutter.html">Kutter</a></li>
+                            <li><a class="dropdown-item" href="../manning/manning.html">Manning</a></li>
+
                         </ul>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="#">Formulas</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
                 </ul>
             </div>
