--- a/99-headloss/manning/manning.html
+++ b/99-headloss/manning/manning.html
@@ -12,7 +12,7 @@
     <div class="container pb-3">
         <div class="text-center banner">
             <h1>Fullness Calculator</h1>
-            <h3>Gravity - Kutter</h3>
+            <h3>Gravity - Manning</h3>
             <div class="mt-5">
                 <ul class="nav nav-tabs">
                     <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
@@ -23,8 +23,8 @@
                     </li>
                     <li class="nav-item dropdown"><a class="nav-link active dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">Gravity</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="kutter.html">Kutter</a></li>
-                            <li><a class="dropdown-item" href="../manning/manning.html">Manning</a></li>
+                            <li><a class="dropdown-item" href="../kutter/kutter.html">Kutter</a></li>
+                            <li><a class="dropdown-item" href="manning.html">Manning</a></li>
                         </ul>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
@@ -86,7 +86,7 @@
                     
                 </div>
                 <div class="col-3">
-                    <label class="col-form-label">Coefficient (m):</label>
+                    <label class="col-form-label">Coefficient (n):</label>
                 </div>
                 <div class="col-3">
                     <input id="coefficient" type="number" step="0.001" min="0" class="form-control" required>
@@ -139,6 +139,6 @@
 
     
     <script src="../bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="kutter.js"></script>
+    <script src="manning.js"></script>
 </body>
 </html>
