--- a/99-headloss/index.html
+++ b/99-headloss/index.html
@@ -18,16 +18,16 @@
                     <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
                     <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">Pressurized</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="hazenwilliams/hazenwilliams.html">Hazen–Williams</a></li>
+                            <li><a class="dropdown-item" href="routes/hazenwilliams/hazenwilliams.html">Hazen–Williams</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">Gravity</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="kutter/kutter.html">Kutter</a></li>
-                            <li><a class="dropdown-item" href="manning/manning.html">Manning</a></li>
+                            <li><a class="dropdown-item" href="routes/kutter/kutter.html">Kutter</a></li>
+                            <li><a class="dropdown-item" href="routes/manning/manning.html">Manning</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="routes/contact/contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -40,7 +40,7 @@
                     <h4 class="card-title" style="font-style: oblique" >Hazen–Williams</h4>
                     <img src="assets/hazen-will.jpg" class="card-image" alt="...">
                     <div class="card-body">
-                        <a href="hazenwilliams/hazenwilliams.html" class="btn btn-primary">Calculate</a>
+                        <a href="routes/hazenwilliams/hazenwilliams.html" class="btn btn-primary">Calculate</a>
                     </div>
                 </div>
             </div>
@@ -55,7 +55,7 @@
                         <h4 class="card-title" style="font-style: oblique">Kutter</h4>
                         <img src="assets/kutter.jpg" class="card-image" alt="...">
                         <div class="card-body">
-                            <a href="kutter/kutter.html" class="btn btn-primary">Calculate</a>
+                            <a href="routes/kutter/kutter.html" class="btn btn-primary">Calculate</a>
                         </div>
                     </div>
 
@@ -67,7 +67,7 @@
                         <h4 class="card-title" style="font-style: oblique">Manning</h4>
                         <img src="assets/manning.jpg" class="card-image" alt="...">
                         <div class="card-body">
-                            <a href="manning/manning.html" class="btn btn-primary">Calculate</a>
+                            <a href="routes/manning/manning.html" class="btn btn-primary">Calculate</a>
                         </div>
                     </div>
 
