--- a/99-headloss/routes/hazenwilliams/hazenwilliams.html
+++ b/99-headloss/routes/hazenwilliams/hazenwilliams.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="../style.css">
+    <link rel="stylesheet" href="../../bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../../style.css">
     <title>Head Loss Calculator</title>
 </head>
 <body>
@@ -15,10 +15,10 @@
             <h3>Pressurized - Hazen–Williams</h3>
             <div class="mt-5">
                 <ul class="nav nav-tabs">
-                    <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../../index.html">Home</a></li>
                     <li class="nav-item dropdown"><a class="nav-link active dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">Pressurized</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="hazenwilliams.html">Hazen–Williams</a></li>
+                            <li><a class="dropdown-item" href="#">Hazen–Williams</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">Gravity</a>
@@ -28,7 +28,7 @@
 
                         </ul>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../contact/contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -212,7 +212,7 @@
         <p>©2024, NGG - All rights reserved.</p>
     </footer>
 
-    <script src="../bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../../bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="hazenwilliams.js"></script>
 </body>
 </html>
