--- a/99-headloss/routes/kutter/kutter.html
+++ b/99-headloss/routes/kutter/kutter.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="../style.css">
+    <link rel="stylesheet" href="../../bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../../style.css">
     <title>Fullness Calculator</title>
 </head>
 <body>
@@ -12,10 +12,10 @@
     <div class="container pb-3">
         <div class="text-center banner">
             <h1>Fullness Calculator</h1>
-            <h3>Gravity - Manning</h3>
+            <h3>Gravity - Kutter</h3>
             <div class="mt-5">
                 <ul class="nav nav-tabs">
-                    <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../../index.html">Home</a></li>
                     <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">Pressurized</a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="../hazenwilliams/hazenwilliams.html">Hazen–Williams</a></li>
@@ -23,11 +23,11 @@
                     </li>
                     <li class="nav-item dropdown"><a class="nav-link active dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">Gravity</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="../kutter/kutter.html">Kutter</a></li>
-                            <li><a class="dropdown-item" href="manning.html">Manning</a></li>
+                            <li><a class="dropdown-item" href="#">Kutter</a></li>
+                            <li><a class="dropdown-item" href="../manning/manning.html">Manning</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../contact/contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -86,7 +86,7 @@
                     
                 </div>
                 <div class="col-3">
-                    <label class="col-form-label">Coefficient (n):</label>
+                    <label class="col-form-label">Coefficient (m):</label>
                 </div>
                 <div class="col-3">
                     <input id="coefficient" type="number" step="0.001" min="0" class="form-control" required>
@@ -138,7 +138,7 @@
     </footer>
 
     
-    <script src="../bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="manning.js"></script>
+    <script src="../../bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="kutter.js"></script>
 </body>
 </html>
