--- a/99-headloss/index.html
+++ b/99-headloss/index.html
@@ -75,8 +75,12 @@
         </div>
     </div>
 
-    <footer class="footer">
-        <p>©2024, NGG - All rights reserved.</p>
+    <footer >
+        <div class="footer p-2">
+            <p class="m-0">©2024, NGG - All rights reserved.</p>
+            <a href="mailto:n.gokcenguner@gmail.com" class="m-0">n.gokcenguner@gmail.com</a>
+        </div>
+        
     </footer>
 
     
